--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,15 @@ header {
     padding: 40px 60px;
 }
 
+.header {
+    position: fixed;
+    width: 100%;
+    top:0;
+    text-align: center;
+    color: #fff;
+    z-index: 999;
+}
+
 header .container {
     justify-content: flex-end;
     align-items: center;
@@ -103,7 +112,7 @@ header .container {
 
 .mainBlock {
     min-height: 100vh;
-    padding-top: 160px;
+    padding-top: 260px;
     padding-left: 60px;
     padding-bottom: 160px;
     background: #273720;
