--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -64,7 +64,7 @@ h1 {
 }
 
 .animation-70 {
-    animation: 2s animation-70 ease;
+    animation: 1s animation-70 ease;
 }
 
 @keyframes animation-70 {
@@ -77,7 +77,7 @@ h1 {
 }
 
 .animation-300 {
-    animation: 2s animation-300 ease;
+    animation: 1s animation-300 ease;
 }
 
 @keyframes animation-300 {
@@ -89,3 +89,13 @@ h1 {
     }
 }
 
+.anim-items {
+    transform: translate(0px, 75%);
+    opacity: 0;
+    transition: all 1.5s ease 0s;
+}
+
+.anim-items.active {
+    transform: translate(0px, 0px);
+    opacity: 1;
+}
